# Primeiro-Projeto

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pytest.ini
mydjangoapp/: Makefile  README.md  manage.py  pyproject.toml
mydjangoapp/apps/core/: __init__.py  models.py  signals.py  tasks.py  views.py
mydjangoapp/apps/core/migrations/: 0001_initial.py  0002_extend_contest.py  0002_favorite.py  0002_schedule_fetch_contests.py
mydjangoapp/apps/users/: models.py  views.py
mydjangoapp/apps/users/migrations/: 0001_initial.py
mydjangoapp/compose/: development.yml  production.yml
mydjangoapp/config/: __init__.py  celery.py  urls.py
mydjangoapp/config/settings/: base.py
mydjangoapp/templates/: contest_list.html  export_pdf.html
mydjangoapp/tests/: test_beat.py  test_favorites.py  test_schedule.py  test_simple.py  test_tasks.py  test_views.py
